feat: update openapi documentation for delete sale endpoint
